--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 
 <script type="text/javascript">
-	
+
 	function Slider () {
 		var dead = document.getElementById('img');
 
@@ -59,6 +59,8 @@ body {
 					dead.src = imgPath;
 					dead.alt = imgArray[imgIndex];
 					$(".slider #img").show("fade", 1000);
+					//TEST
+					//asd
 					document.getElementById("img").style.webkitFilter = 'none';
 					document.getElementById("img").style.filter = 'none';
 					setTimeout(
