--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ body {
 					$(".slider #img").show("fade", 1000);
 					//TEST
 					//asd
+					//abcd
 					document.getElementById("img").style.webkitFilter = 'none';
 					document.getElementById("img").style.filter = 'none';
 					setTimeout(
