--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 Test
-
+Testing
 <head>
   <meta charset="UTF-8">
   <title>Website Slider</title>
@@ -63,7 +63,6 @@ Test
     			dead.src = imgPath;
     			dead.alt = imgArray[imgIndex];
     			$(".slider #img").show("fade", 1000);
-    			//asd
     			document.getElementById("img").style.webkitFilter = 'none';
     			document.getElementById("img").style.filter = 'none';
     			setTimeout(
