--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Website Slider</title>
+  <title>Last Hen Standing</title>
 
   <style type="text/css">
     body {
