--- a/index.html
+++ b/index.html
@@ -122,16 +122,19 @@
 
   <figure class="animated fadeInRight">
     <div class="figure-switcher" id="i1">
-      <img src="LHS/web/Deaths.png" />
+      <img src="LHS/web/Welcome.png" />
     </div>
     <div class="figure-switcher" id="i2">
       <img src="LHS/img/dat14vwi.jpg" />
     </div>
     <div class="figure-switcher" id="i3">
+      <img src="LHS/web/Deaths.png" />
     </div>
     <div class="figure-switcher" id="i4">
+     <img src="LHS/web/BG.png" />  
     </div>
     <div class="figure-switcher" id="i5">
+     <img src="LHS/img/dat14ago.jpg" />
     </div>
   </figure>
 
@@ -160,7 +163,9 @@
     </div>
     <div class="content-switcher" id="p3">
       <h4>Services</h4>
-      <br> I have work experience as an IT technician, shop salesman and cashier. Parallel to my studies, I am inter alia functionary in various committees. In the future I hope to work for a company I really enjoy.
+      <br>
+      <p> I have work experience as an IT technician, shop salesman and cashier. Parallel to my studies, I am inter alia functionary in various committees. In the future I hope to work for a company I really enjoy.
+      </p>
     </div>
     <div class="content-switcher" id="p4">
       <h4>My Projects</h4>
@@ -172,10 +177,12 @@
     </div>
     <div class="content-switcher" id="p5">
       <h4>Contact</h4>
+      <p>
       <br> +46 (0) 705 17 23 30
       <br> Salviavägen 7
       <br> Bjärred 237 37
       <br> Sweden
+      </p>
     </div>
   </section>
 
