Signed-off-by: Victor <dat14vwi@student.lu.se>

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="inner">
 							<h2>Victor Winberg</h2>
 							<p>Student at<br />
-							The Faculty of Engineering<br />
+							<a href="http://www.lth.se/">The Faculty of Engineering</a><br />
 							at <a href="http://www.lu.se/">Lund University</a>.</p>
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
