--- a/elements.html
+++ b/elements.html
@@ -363,19 +363,19 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</section>
 					</article>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+					<!-- Footer -->
+						<footer id="footer">
+							<ul class="icons">
+								<li><a href="https://github.com/VictorWinberg/" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.facebook.com/ViictooorW" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.youtube.com/user/VictorW95" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+								<li><a href="https://se.linkedin.com/in/victorwinberg" class="icon fa-linkedin"><span class="label">Linked In</span></a></li>
+								<li><a href="mailto:dat14vwi@student.lu.se" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Victor Winberg</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</footer>
 
 			</div>
 
