--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Victor Winberg</h2>
-							<p>Student at<br />
-							<a href="http://www.lth.se/">The Faculty of Engineering</a><br />
-							at <a href="http://www.lu.se/">Lund University</a>.</p>
+							<p>Studying Master of Science in <br />
+							<a href="http://www.lth.se/english/education/programmes/master-engineering/computer-science-engineering/">Computer Science and Engineering</a><br />
+							at <a href="http://www.lunduniversity.lu.se/">Lund University</a>.</p>
 							<ul class="actions">
 								<li><a href="#pm" class="button scrolly special">Contact me</a></li>
 							</ul>
@@ -52,10 +52,10 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>My Skills: Java | C# | HTML5 | CSS3 |
+								Calculus in One Variable | Basic Electronics | Linear Algebra </h2>
+								<p>Basic knowledge abouth the software engineering development process - Methodology.<br />
+								Part of Corporate Relations for Computer Science Programme within <a href="http://www.tlth.se/270-English">TLTH</a>.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
@@ -136,7 +136,7 @@
 							</header>
 							<ul class="actions vertical">
 								<li><a href="#pm" class="button scrolly special">Contact me</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="#banner" class="button scrolly fit">Back to top</a></li>
 							</ul>
 						</div>
 					</section>
