Signed-off-by: Victor <dat14vwi@student.lu.se>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>My Skills: Java | C# | HTML5 | CSS3 |
+								<h2>Skills: Java | C# | HTML5 | CSS3 |
 								Calculus in One Variable | Basic Electronics | Linear Algebra </h2>
 								<p>Basic knowledge abouth the software engineering development process - Methodology.<br />
 								Part of Corporate Relations for Computer Science Programme within <a href="http://www.tlth.se/270-English">TLTH</a>.</p>
@@ -69,23 +69,21 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Tools: eclipse, Unity, LaTeX,
+								Office and Adobe package</h2>
+								<p>Also miscellaneous video, photo and sound editor tools.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Past Work: Coding at Cup Manager, Retail sales at Harald Nyborg</h2>
+								<p>Also junior IT-technician at School of Economics and Management, Lund University.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Other: Former Handball player, Studied Language Abroad</h2>
+								<p>Also played guitar, drums and piano.</p>
 							</div>
 						</section>
 					</section>
