New website with bootstrap

--- a/index.html
+++ b/index.html
@@ -1,152 +1,82 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>Mr. Winberg</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="css/style.css" />
-	</head>
-	<body class="landing">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+  <title>Victor Winberg</title>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Victor Winberg</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
+  <!-- Bootstrap core CSS -->
+  <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Victor Winberg</h2>
-							<p>Studying Master of Science in <br />
-							<a href="http://www.lth.se/english/education/programmes/master-engineering/computer-science-engineering/">Computer Science and Engineering</a><br />
-							at <a href="http://www.lunduniversity.lu.se/">Lund University</a>.</p>
-							<ul class="actions">
-								<li><a href="#pm" class="button scrolly special">Contact me</a></li>
-							</ul>
-						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
-					</section>
+  <!-- Animate.css -->
+  <link href="css/animate.min.css" rel="stylesheet">
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Skills: Java | C# | HTML5 | CSS3 |
-								Calculus in One Variable | Basic Electronics | Linear Algebra </h2>
-								<p>Basic knowledge abouth the software engineering development process - Methodology.<br />
-								Part of Corporate Relations for Computer Science Programme within <a href="http://www.tlth.se/270-English">TLTH</a>.</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
-						</div>
-					</section>
+  <!-- Custom styles -->
+  <link href="css/cover.css" rel="stylesheet">
+  <link href="css/bootstrap-social.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Tools: eclipse, Unity, LaTeX,
-								Office and Adobe package</h2>
-								<p>Also miscellaneous video, photo and sound editor tools.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Past Work: Coding at Cup Manager, Retail sales at Harald Nyborg</h2>
-								<p>Also junior IT-technician at School of Economics and Management, Lund University.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Other: Former Handball player, Studied Language Abroad</h2>
-								<p>Also played guitar, drums and piano.</p>
-							</div>
-						</section>
-					</section>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-							</ul>
-						</div>
-					</section>
+  <script src="js/ie-emulation-modes-warning.js"></script>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://github.com/VictorWinberg/" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.facebook.com/ViictooorW" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.youtube.com/user/VictorW95" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
-							<li><a href="https://se.linkedin.com/in/victorwinberg" class="icon fa-linkedin"><span class="label">Linked In</span></a></li>
-							<li><a href="mailto:dat14vwi@student.lu.se" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Victor Winberg</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+  <style type="text/css">
+    .img-container {
+      max-width: 200px;
+    }
 
-			</div>
+    @media (min-width: 768px) {
 
-		<!-- Scripts -->
-			<script src="js/jquery.min.js"></script>
-			<script src="js/jquery.scrollex.min.js"></script>
-			<script src="js/jquery.scrolly.min.js"></script>
-			<script src="js/skel.min.js"></script>
-			<script src="js/init.js"></script>
+    }
 
-	</body>
+    @media (min-width: 992px) {
+      .img-container {
+        max-width: 300px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="site-wrapper">
+    <div class="site-wrapper-inner">
+      <div class="cover-container">
+        <div class="center-block img-container animated fadeInDown">
+          <img src="https://scontent-arn2-1.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/1800269_769377206442476_2582664354502913154_n.jpg?oh=14b7c67d742efedad6a3ca075fa8dd1b&oe=56286A86" class="img-circle img-responsive">
+        </div>
+
+        <div class="text-center">
+          <h1 class="animated bounceIn">Victor Winberg <br>
+            <small class="lead">Studying Master of Science in
+              <a href="http://www.lth.se/english/education/programmes/master-engineering/computer-science-engineering/">
+                Computer Science and Engineering</a> at <a href="http://www.lunduniversity.lu.se/">Lund University</a>.</small>
+          </h1>
+
+          <ul class="list-inline animated fadeInUp">
+            <li><a href="https://github.com/VictorWinberg/" class="fa fa-github fa-2x"></a></li>
+            <li><a href="https://www.facebook.com/ViictooorW" class="fa fa-facebook fa-2x"></a></li>
+            <li><a href="https://www.youtube.com/user/VictorW95" class="fa fa-youtube fa-2x"></a></li>
+            <li><a href="https://se.linkedin.com/in/victorwinberg" class="fa fa-linkedin fa-2x"></a></li>
+            <li><a href="mailto:dat14vwi@student.lu.se" class="fa fa-envelope-o fa-2x"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap core JavaScript
+    ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="js/ie10-viewport-bug-workaround.js"></script>
+</body>
+
 </html>
