Github embeded info

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
   <link href="css/bootstrap-social.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-
   <script src="js/ie-emulation-modes-warning.js"></script>
 
   <style type="text/css">
     .img-container {
       max-width: 200px;
+    }
+
+    .item {
+      max-height: 200px;
     }
 
     .nav-pills li, .nav-pills li a {
@@ -43,6 +46,9 @@
     @media (min-width: 768px) {
       .img-container {
         max-width: 300px;
+      }
+      .item {
+        max-height: 300px;
       }
     }
 
@@ -59,12 +65,35 @@
         <nav class="nav nav-pills navbar-right">
           <li><a href="CV.pdf" target="_blank">Download CV</a></li>
         </nav>
+
         <div class="center-block img-container animated fadeInDown">
-          <img src="https://scontent-arn2-1.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/1800269_769377206442476_2582664354502913154_n.jpg?oh=14b7c67d742efedad6a3ca075fa8dd1b&oe=56286A86" class="img-circle img-responsive">
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="img/dat14vwi.jpg" class="img-circle img-responsive">
+              </div>
+              <div class="item">
+                <div class="github-card" data-github="VictorWinberg" data-width="100%" data-height="100%" data-theme="medium"></div>
+                <div class="github-card" data-github="VictorWinberg" data-width="100%" data-height="100%" data-theme="default"></div>
+              </div>
+              <div class="item">
+                <div class="github-card" data-github="VictorWinberg/budcom.se" data-width="100%" data-height="100%" data-theme="default"></div>
+                <div class="github-card" data-github="VictorWinberg/LHS" data-width="100%" data-height="100%" data-theme="default"></div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="text-center">
-          <h1 class="animated bounceIn"><img src="img/v_48x48.png" align="bottom"></img>ictor Winberg <br>
+          <h1 class="animated bounceIn"><img src="img/v_48x48.png" align="bottom" alt="V"></img>ictor Winberg <br>
             <small class="lead">Studying Master of Science in
               <a href="http://www.lth.se/english/education/programmes/master-engineering/computer-science-engineering/" target="_blank">
                 Computer Science and Engineering</a> at <a href="http://www.lunduniversity.lu.se/" target="_blank">Lund University</a>.</small>
@@ -89,6 +118,8 @@
   <script src="js/bootstrap.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="js/ie10-viewport-bug-workaround.js"></script>
+  <!-- Github Card widget -->
+  <script src="js/widget.js"></script>
 </body>
 
 </html>
