--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
     </div>
   </div>
 
+  <canvas id="c" style="display:block"></canvas>
+  
+  <script src="js/matrix.js"></script>
   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
