--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
   <div class="site-wrapper">
     <div class="site-wrapper-inner">
       <div class="cover-container">
-        <nav class="nav nav-pills navbar-right">
+        <nav class="nav nav-tabs navbar-right">
           <li><a href="CV.pdf" target="_blank">Download CV</a></li>
         </nav>
 
         <div class="center-block img-container animated fadeInDown">
-          <img src="img/dat14vwi.jpg" class="img-circle img-responsive">
+          <img src="img/dat14vwi.jpg" class="animated infinite pulse img-circle img-responsive">
         </div>
 
         <div class="text-center">
-          <h1 class="animated bounceIn">victor<b>winberg</b><br>
+          <h1 class="animated bounceIn">Hi, I'm victor<b>winberg</b><br>
             <small class="lead">Studying Master of Science in
               <a href="http://www.lth.se/english/education/programmes/master-engineering/computer-science-engineering/" target="_blank">
                 Computer Science and Engineering</a> at <a href="http://www.lunduniversity.lu.se/" target="_blank">Lund University</a>.</small>
@@ -104,5 +104,6 @@
   <script src="js/ie10-viewport-bug-workaround.js"></script>
   <script src="js/matrix.js"></script>
   <script src="js/project.js"></script>
+  <script src="js/style.js"></script>
 </body>
 </html>
