animation boxshadow and img zoom

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div><!--/.nav-collapse -->
 
         <div class="center-block img-container animated fadeInDown">
-          <img src="img/dat14vwi.jpg" class="animated infinite pulse img-circle img-responsive">
+          <img src="img/dat14vwi.jpg" class="pulse img-circle img-responsive">
         </div>
 
         <div class="text-center">
