Ereuntzdag.se is local

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li><a href="http://www.teknikfokus.se/">Teknikfokus 2016</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">For fun</li>
-                <li><a href="http://ereuntzdag.se/">ereuntzdag.se</a></li>
+                <li><a href="ereuntzdag.se">ereuntzdag.se</a></li>
                 <li><a href="LHS">Last Hen Standing</a></li>
               </ul>
             </li>
